REFACTOR for beauty

--- a/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
+++ b/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
@@ -1,21 +1,16 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
-            <app-edit-toggle [isInUpdateState]="true" [link]="updateCancelUrl"></app-edit-toggle>
+        <ng-container *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
+            <app-edit-toggle 
+            [isInUpdateState]="true" 
+            [link]="updateCancelUrl">
+            </app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Diaryentry "{{ userModel.title }}"
             </h2>
-        </div>
-        
-        <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]="true" [link]="creationCancelUrl"></app-edit-toggle>
-            <h2 class="text-center">
-                Creating a new Diaryentry
-            </h2>
-        </ng-template>
-
+        </ng-container>
 
         <!-- Form -->
         <app-formly-formcontainer
@@ -37,3 +32,14 @@
 
     </article>
 </div>
+
+<ng-template #createState>
+    <app-edit-toggle 
+    [isInUpdateState]="true" 
+    [link]="creationCancelUrl">
+    </app-edit-toggle>
+    
+    <h2 class="text-center">
+        Creating a new Diaryentry
+    </h2>
+</ng-template>
