--- a/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
+++ b/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
@@ -12,13 +12,21 @@
             <!-- Location Form -->
             <div class="mb-5">
                 <h5 class="mb-0"> Location Fields </h5>
-                <formly-form [form]="locationForm" [fields]="location_fields" [model]="locationModel"></formly-form>    
+                <formly-form 
+                [form]="locationForm" 
+                [fields]="location_fields" 
+                [model]="locationModel">
+                </formly-form>    
             </div>
 
             <!-- Marker Form -->
             <div>
                 <h5 class="mb-0"> Marker Fields </h5>
-                <formly-form [form]="markerForm" [fields]="marker_fields" [model]="markerModel"></formly-form>
+                <formly-form 
+                [form]="markerForm" 
+                [fields]="marker_fields" 
+                [model]="markerModel">
+                </formly-form>
             </div>
             
             <!-- Form Buttons -->
