--- a/src/app/components/articles/marker-map-create/marker-map-create.component.html
+++ b/src/app/components/articles/marker-map-create/marker-map-create.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <article class="mb-5">
         <app-edit-toggle 
-        [isInUpdateState]=true 
+        [isInUpdateState]="true" 
         [link]="mapUrl"
         ></app-edit-toggle>
 
