--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -4,8 +4,8 @@
     <header class="mb-1">
         <div class="d-flex flex-column">
             <img class="large align-self-center"
-            [src]="constants.wikiUrl + campaignData?.icon" [alt]="constants.defaultCampaignIconUrl"
-            />
+            [src]="constants.wikiUrl + campaignData?.icon" 
+            [alt]="constants.defaultCampaignIconUrl"/>
             <h1 class="mb-1"> {{campaignData.name}} </h1>
             <strong class="hide-on-mobile" [innerHTML]="campaignData.subtitle"></strong>
         </div>
