--- a/src/app/components/articles/location-article-update/location-article-update.component.html
+++ b/src/app/components/articles/location-article-update/location-article-update.component.html
@@ -1,25 +1,13 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
+        <ng-container *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle [isInUpdateState]="true" [link]="updateCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Location {{ userModel.name }}
             </h2>
-        </div>
-        
-        <ng-template #createState>
-            <app-edit-toggle 
-            [isInUpdateState]="true" 
-            [link]="creationCancelUrl"
-            ></app-edit-toggle>
-
-            <h2 class="text-center">
-                Adding a new Location
-            </h2>
-        </ng-template>
-
+        </ng-container>
 
         <!-- Form -->
         <app-formly-formcontainer
@@ -41,3 +29,14 @@
 
     </article>
 </div>
+
+<ng-template #createState>
+    <app-edit-toggle 
+    [isInUpdateState]="true" 
+    [link]="creationCancelUrl"
+    ></app-edit-toggle>
+
+    <h2 class="text-center">
+        Adding a new Location
+    </h2>
+</ng-template>
