--- a/src/app/components/articles/map-update/map-update.component.html
+++ b/src/app/components/articles/map-update/map-update.component.html
@@ -1,24 +1,14 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
+        <ng-container *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle
             [isInUpdateState]="true" 
             [link]="updateCancelUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center"> Updating Map {{ userModel.name }} </h2>
-        </div>
-        
-        <ng-template #createState>
-            <app-edit-toggle 
-            [isInUpdateState]="true" 
-            [link]="creationCancelUrl"
-            ></app-edit-toggle>
-
-            <h2 class="text-center"> Adding a new Map </h2>
-        </ng-template>
-
+        </ng-container>
 
         <!-- Form -->
         <app-formly-formcontainer
@@ -40,3 +30,12 @@
 
     </article> 
 </div>
+
+<ng-template #createState>
+    <app-edit-toggle 
+    [isInUpdateState]="true" 
+    [link]="creationCancelUrl"
+    ></app-edit-toggle>
+
+    <h2 class="text-center"> Adding a new Map </h2>
+</ng-template>
