--- a/src/app/components/articles/organization-article-update/organization-article-update.component.html
+++ b/src/app/components/articles/organization-article-update/organization-article-update.component.html
@@ -1,23 +1,14 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
+        <ng-container *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle 
             [isInUpdateState]=true 
             [link]="'..'"
             ></app-edit-toggle>
 
             <h2 class="text-center"> Updating Organization {{ userModel.name }} </h2>
-        </div>
-        
-        <ng-template #createState>
-            <app-edit-toggle 
-            [isInUpdateState]=true 
-            [link]="creationCancelUrl"
-            ></app-edit-toggle>
-
-            <h2 class="text-center"> Creating a new Organization </h2>
-        </ng-template>
+        </ng-container>
 
         <!-- Form -->
         <app-formly-formcontainer
@@ -39,3 +30,13 @@
 
     </article>
 </div>
+
+        
+<ng-template #createState>
+    <app-edit-toggle 
+    [isInUpdateState]=true 
+    [link]="creationCancelUrl"
+    ></app-edit-toggle>
+
+    <h2 class="text-center"> Creating a new Organization </h2>
+</ng-template>
